tests/conformance/valid/max3_profile.plk
P1 fixture_max2 (V0[:8.0], V1[:8.0]) => R0[:8.0]
V0[:8.0] => Z1[:8.0]
(Z1[:8.0] < V1[:8.0]) => V1[:8.0] => Z1[:8.0]
Z1[:8.0] => R0[:8.0]
END

P2 valid_max3_profile () => R0[:8.0]
fixture_max2(4[:8.0], 9[:8.0]) => Z1[:8.0]
fixture_max2(Z1[:8.0], 7[:8.0]) => R0[:8.0]
END
